@@ -1,0 +1,7 @@
+$('.dropdown-toggle').dropdown()
+$('.collapse').collapse('show')
+$('#myModal').modal('hide')
+$('.typeahead').typeahead()
+$('.tabs').button()
+$('.tip').tooltip()
+$(".alert-message").alert()
